<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
  
  <group android:checkableBehavior="all">
    <item
        android:id="@+id/nav_set_loc"
        android:icon="@drawable/placeholder"
        android:title="@string/set_location"
        />
    <item
        android:id="@+id/nav_cities_list"
        android:icon="@drawable/list"
        android:title="@string/cities"
        />
    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/settings"
        />
  </group>
  
  <item android:title="@string/communicate">
    <menu>
      <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share"
            />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/send"
            />
      </group>
    </menu>
  </item>

</menu>