<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="bottom"
    >
  
  <androidx.appcompat.widget.AppCompatImageView
      android:layout_width="80dp"
      android:layout_height="80dp"
      app:srcCompat="@drawable/ic_user"
      android:contentDescription="@string/nav_header_desc"
      android:id="@+id/imageView"
      />
  
  <androidx.appcompat.widget.AppCompatTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@android:color/white"
      android:paddingTop="@dimen/nav_header_vertical_spacing"
      android:text="@string/app_name"
      />
  
  <androidx.appcompat.widget.AppCompatTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@android:color/white"
      android:text="@string/nav_header_subtitle"
      android:id="@+id/textView"
      />

</androidx.appcompat.widget.LinearLayoutCompat>
